--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "name": "cse340-practice-lee",
     "dependencies": {
+        "dotenv": "^17.2.4",
         "ejs": "^4.0.1",
-        "express": "^5.2.1"
+        "express": "^5.2.1",
+        "pg": "^8.18.0"
     },
     "type": "module",
     "scripts": {
