--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: cse340-practice
     env: node
     plan: free
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: pnpm install
+    startCommand: pnpm start
     envVars:
       - key: NODE_ENV
         value: production
